feat(auth): implement JWT authentication service with cookie storage
- Add AuthService with register, login, logout and session check functionality
- Implement BearerTokenHandler for automatic JWT token injection
- Configure HttpClient with token handler in Program.cs
- Update IAuthService interface to reflect new methods
- Add BaseUrl configuration in appsettings.json

--- a/home away/home away/appsettings.json
+++ b/home away/home away/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HomeAwayAPI": {
+    "BaseUrl": "https://localhost:7184/api/"
+  }
 }
