--- a/front-end/front-end/appsettings.json
+++ b/front-end/front-end/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HomeAwayAPI": {
+    "BaseUrl": "https://localhost:7184/api/"
+  }
 }
